1.16-4.0.4-alpha:
- Temporary 'fix' to avoid what looks like a bug in Vanilla when clearing out large sections of a chunk. This bug manifests itself when clearing up chunks after being damaged by an explosion
- Better city generation with 'floating' landscape type by improving the way the height of a chunk is detected
- New 'cityAvoidVoid' config option: Only used with floating landscape type: if true an additional detection is done to see if the chunk is void and in that case the city isn't generated there. Otherwise you might get city chunks on the border of islands which sometimes looks weird
- The 'dimensionProfiles' config option has been renamed to 'dimensionsWithProfiles' to force a regen
- The bed with skulls (and diamond blocks) works again and will teleport to the 'lostcities:lostcity' dimension if present
- New 'lostcities:lostcity' dimension in the datapack. You can reconfigure this with a datapack by replacing the lostcity dimension type and/or dimension

1.16-4.0.3-alpha:
- Considerably improved Lost City worldgen on world types that use the standard NoiseChunkGenerator

1.16-4.0.2-alpha:
- Register the configured feature for Lost Cities so that it should improve compatibility with other mods generation

1.16-4.0.1-alpha:
- Some serious optimizations which will improve the speed of worldgen in combination with lost cities

1.16-4.0.0-alpha:
- First port to 1.16.3: alpha!

1.15-3.0.2-alpha:
- Fixed a problem on servers

3.0.1-alpha:
- Avoid generating Lost Cities in biomes that are marked as 'void'
- Avoid a crash with some blocks (beehives) causing out of bounds errors during chunk generation
- mmcgill refined the above fix so the crash testing is actually not really needed

2.0.28-alpha:
- Fixed a crash in Lost Cities loading existing worlds

2.0.27-alpha:
- Added lc_cavern worldtype for cavern style worlds
- The Lost City configuration screen (LC button) will now select 'cavern' as first option if you are using lc_cavern