@@ -1,7 +1,6 @@
 package mcjty.lostcities.setup;
 
 import mcjty.lostcities.LostCities;
-import mcjty.lostcities.config.ConfigSetup;
 import mcjty.lostcities.config.LostCityConfiguration;
 import mcjty.lostcities.network.PacketHandler;
 import mcjty.lostcities.worldgen.LostCityFeature;
@@ -9,12 +8,13 @@ import mcjty.lostcities.worldgen.lost.cityassets.AssetRegistries;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.fml.ModList;
 import net.minecraftforge.fml.event.lifecycle.FMLCommonSetupEvent;
+import net.minecraftforge.fml.loading.FMLPaths;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.UncheckedIOException;
+import java.io.*;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Path;
 
 public class ModSetup {
 
@@ -42,7 +42,6 @@ public class ModSetup {
 
         setupModCompat();
 
-        ConfigSetup.init();
 //        ModDimensions.init();
 
         MinecraftForge.EVENT_BUS.register(new ForgeEventHandlers());
@@ -53,21 +52,46 @@ public class ModSetup {
 //        LootTableList.register(new ResourceLocation(LostCities.MODID, "chests/lostcitychest"));
 //        LootTableList.register(new ResourceLocation(LostCities.MODID, "chests/raildungeonchest"));
 
-        ConfigSetup.postInit();
-        ConfigSetup.profileConfigs.clear();
+        readAssets();
 
+        makeExamples();
+    }
+
+    private void makeExamples() {
+        Path configPath = FMLPaths.CONFIGDIR.get();
+        File dir = new File(configPath + File.separator + "lostcities" + File.separator + "examples");
+        dir.mkdirs();
+        File exampleConditions = new File(configPath + File.separator + "lostcities" + File.separator + "examples" + File.separator + "conditions.json");
+        try {
+            FileWriter writer = new FileWriter(exampleConditions);
+            writer.append("// This is an example set of conditions that you can use and modify and put\n");
+            writer.append("// into (for example) config/lostcities/userassets.json\n\n");
+            InputStream inputstream = LostCities.class.getResourceAsStream("/assets/lostcities/citydata/conditions.json");
+            BufferedReader br = new BufferedReader(new InputStreamReader(inputstream, StandardCharsets.UTF_8));
+            for (String line = br.readLine(); line != null; line = br.readLine()) {
+                writer.append(line + "\n");
+            }
+
+            br.close();
+            writer.close();
+        } catch (IOException e) {
+            LostCities.logger.warn("Could not write examples!");
+        }
+    }
+
+    private void readAssets() {
         AssetRegistries.reset();
-        for (String path : LostCityConfiguration.ASSETS) {
+        for (String path : Config.ASSETS.get()) {
             if (path.startsWith("/")) {
                 try(InputStream inputstream = LostCities.class.getResourceAsStream(path)) {
                     AssetRegistries.load(inputstream, path);
                 } catch (IOException ex) {
                     throw new UncheckedIOException(ex);
                 }
-// @todo 1.14
-//            } else if (path.startsWith("$")) {
-//                File file = new File(modConfigDir.getPath() + File.separator + path.substring(1));
-//                AssetRegistries.load(file);
+            } else if (path.startsWith("$")) {
+                Path configPath = FMLPaths.CONFIGDIR.get();
+                File file = new File(configPath + File.separator + path.substring(1));
+                AssetRegistries.load(file);
             } else {
                 throw new RuntimeException("Invalid path for lostcity resource in 'assets' config!");
             }
